--- a/index.html
+++ b/index.html
@@ -1,13 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <script src="sckript.js"></script>
+    <link rel="icon" type="image/x-icon" href="img/quizicon.png" />
+    <!--Bootstrap files-->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <!--Bootstrap files-->
     <title>QuizApp</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <nav class="navbar bg-body-tertiary">
+      <div class="container-fluid">
+        <span class="navbar-brand mb-0 h1">QuizApp</span>
+      </div>
+    </nav>
+    <div class="container">
+      <div class="card quiz-card">
+        <img src="img/quiz.jpg" class="card-img-top" alt="quiz pic" />
+        <div class="card-body">
+          <h5 class="card-title">Frage</h5>
+          <div class="card mb-2">
+            <div class="card-body">Antwort1</div>
+          </div>
+          <div class="card mb-2">
+            <div class="card-body">Antwort2</div>
+          </div>
+          <div class="card mb-2">
+            <div class="card-body">Antwort3</div>
+          </div>
+          <div class="card mb-2">
+            <div class="card-body">Antwor4</div>
+          </div>
+          <div class="question-footer">
+            <span> <b>1</b> von <b>5</b> Fragen </span>
+            <button class="btn btn-primary">Nächste Frage</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
