--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!--Bootstrap files-->
     <title>QuizApp</title>
   </head>
-  <body>
+  <body onload="init()">
     <nav class="navbar bg-body-tertiary">
       <div class="container-fluid">
         <span class="navbar-brand mb-0 h1">QuizApp</span>
@@ -31,21 +31,21 @@
       <div class="card quiz-card">
         <img src="img/quiz.jpg" class="card-img-top" alt="quiz pic" />
         <div class="card-body">
-          <h5 class="card-title">Frage</h5>
-          <div class="card mb-2">
-            <div class="card-body">Antwort1</div>
+          <h5 class="card-title" id="questiontext">Frage</h5>
+          <div class="card quiz-answer-card mb-2">
+            <div class="card-body" id="answer_1">Antwort1</div>
           </div>
-          <div class="card mb-2">
-            <div class="card-body">Antwort2</div>
+          <div class="card quiz-answer-card mb-2">
+            <div class="card-body" id="answer_2">Antwort2</div>
           </div>
-          <div class="card mb-2">
-            <div class="card-body">Antwort3</div>
+          <div class="card quiz-answer-card mb-2">
+            <div class="card-body" id="answer_3">Antwort3</div>
           </div>
-          <div class="card mb-2">
-            <div class="card-body">Antwor4</div>
+          <div class="card quiz-answer-card mb-2">
+            <div class="card-body" id="answer_4">Antwor4</div>
           </div>
           <div class="question-footer">
-            <span> <b>1</b> von <b>5</b> Fragen </span>
+            <span> <b>1</b> von <b id="all-questions">5</b> Fragen </span>
             <button class="btn btn-primary">Nächste Frage</button>
           </div>
         </div>
