--- a/index.html
+++ b/index.html
@@ -32,21 +32,21 @@
         <img src="img/quiz.jpg" class="card-img-top" alt="quiz pic" />
         <div class="card-body">
           <h5 class="card-title" id="questiontext">Frage</h5>
-          <div class="card quiz-answer-card mb-2">
+          <div class="card quiz-answer-card mb-2" onclick="answer('answer_1')">
             <div class="card-body" id="answer_1">Antwort1</div>
           </div>
-          <div class="card quiz-answer-card mb-2">
+          <div class="card quiz-answer-card mb-2" onclick="answer('answer_2')">
             <div class="card-body" id="answer_2">Antwort2</div>
           </div>
-          <div class="card quiz-answer-card mb-2">
+          <div class="card quiz-answer-card mb-2" onclick="answer('answer_3')">
             <div class="card-body" id="answer_3">Antwort3</div>
           </div>
-          <div class="card quiz-answer-card mb-2">
+          <div class="card quiz-answer-card mb-2" onclick="answer('answer_4')">
             <div class="card-body" id="answer_4">Antwor4</div>
           </div>
           <div class="question-footer">
-            <span> <b>1</b> von <b id="all-questions">5</b> Fragen </span>
-            <button class="btn btn-primary">Nächste Frage</button>
+            <span> <b id="question-number">1</b> von <b id="all-questions">5</b> Fragen </span>
+            <button onclick="nextQuestion()" class="btn btn-primary" id="next-button" disabled >Nächste Frage</button>
           </div>
         </div>
       </div>
