--- a/index.html
+++ b/index.html
@@ -29,8 +29,22 @@
     </nav>
     <div class="container">
       <div class="card quiz-card">
-        <img src="img/quiz.jpg" class="card-img-top" alt="quiz pic" />
-        <div class="card-body">
+        <img src="img/quiz.jpg" id="header-img" class="card-img-top" alt="quiz pic" />
+
+        <div class="progress">
+          <div class="progress-bar" id="progress-bar" role="progressbar" style="width: 0%">25%</div>
+        </div>
+
+        <div class="card-body" id="endScreen" style="display: none;">
+          <div class="text-center finish-text">Quiz beendet!</div>
+          
+          <div class="text-center">Du hast <b id="amountOfRightQuestions">xx</b> Fragen von <b id="amountOfQuestions">xx</b> richtig beantwortet.</div>
+          <div class="button-row">
+            <button onclick="restartGame()" class="btn btn-primary" id="new-game">Noch Mal</button>
+          </div>
+        </div>
+
+        <div class="card-body" id="qustionBody">
           <h5 class="card-title" id="questiontext">Frage</h5>
           <div class="card quiz-answer-card mb-2" onclick="answer('answer_1')">
             <div class="card-body" id="answer_1">Antwort1</div>
