--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <title>QuizApp</title>
   </head>
   <body onload="init()">
+    <h1>test</h1>
     <nav class="navbar bg-body-tertiary">
       <div class="container-fluid">
         <span class="navbar-brand mb-0 h1">QuizApp</span>
